added Intl Mono as a second typeface

--- a/src/fonts/fonts.css
+++ b/src/fonts/fonts.css
@@ -11,3 +11,10 @@
   font-weight: 400;
   font-style: normal;
 }
+
+@font-face {
+  font-family: 'Suisse Intl Mono';
+  src: url('./SuisseIntlMono-Regular-WebS.woff2') format('woff2'), url('./SuisseIntlMono-Regular-WebS.woff') format('woff');
+  font-weight: 400;
+  font-style: normal;
+}
